--- a/CSSTraining/week1/task/index.html
+++ b/CSSTraining/week1/task/index.html
@@ -13,11 +13,24 @@
             <h1>Joanne <br> Chen</h1>
             <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/photo.png" alt="個人照片">
             <h2>個人資料<span class="eg red">PROFILE</span></h2>
-            <p>陳久安 Joanne Chen <br> 1997- <br> 應屆畢業生／接案設計師／UI 設計實習生</p>
-            <p class="space">UI 設計修行中／立志當斜槓青年 <br> 獨立接案，內容涵蓋： <br> 品牌規劃、視覺設計、編輯設計、標準字、物件及印刷品設計等。</p>
+            <ul>
+                <li>陳久安 Joanne Chen</li>
+                <li>1997-</li>
+                <li>應屆畢業生／接案設計師／UI 設計實習生</li>
+            </ul>
+            <ul>
+                <li>UI 設計修行中／立志當斜槓青年</li>
+                <li>獨立接案，內容涵蓋： <br> 品牌規劃、視覺設計、編輯設計、標準字、物件及印刷品設計等。</li>
+            </ul>
+        </div>
+    </div>
+    <div class="education">
+        <div class="container">
             <h2>學歷<span class="eg red">EDUCATION</span></h2>
-            <p>國立六角師範大學 視覺設計學系 學士學位 | 2016－2020</p>
-            <p>國立六腳高級中學 美術班 | 2013－2016</p>
+            <ul>
+                <li>國立六角師範大學 視覺設計學系 學士學位 | 2016－2020</li>
+                <li>國立六腳高級中學 美術班 | 2013－2016</li>
+            </ul>
         </div>
     </div>
     <div class="skills">
@@ -38,14 +51,14 @@
         <div class="container">
             <h2>工作經驗<span class="eg red">WORK EXPERIENCE</span></h2>
             <ul>
-                <li>六角學院 視覺設計實習生 | 2019/07－2020/06
+                <li><h3>六角學院 視覺設計實習生 | 2019/07－2020/06</h3>
                     <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/Group%201.svg" alt="六角學院 logo">
                     <p>在六角學院長達一年的實習中，前期藉由公司課程掌握 HTML, CSS, <br> Adobe XD，設計給學員使用的名片設計教材，並參與六角週年活動，設 <br> 計各式周邊商品及活動網路宣傳圖。後期進入 UI 設計範疇，設計六角共 <br> 筆部落格 - W3HexSchool、六角發案服務網介面設計、供給學員的教 <br> 案- RWD官方網站設計，並設計各式網頁活動宣傳圖。</p>
                 </li>
-                <li>獨立接案 Hao Jun 酒標設計 | 2019</li>
-                <li>獨立接案 Exulans 酒標設計 | 2019</li>
-                <li>獨立接案 桃園平鎮市民健走活動提案 | 2019</li>
-                <li>Simtree 興趣咖啡 工讀生 | 2018－2019
+                <li><h3>獨立接案 Hao Jun 酒標設計 | 2019</h3></li>
+                <li><h3>獨立接案 Exulans 酒標設計 | 2019</h3></li>
+                <li><h3>獨立接案 桃園平鎮市民健走活動提案 | 2019</h3></li>
+                <li><h3>Simtree 興趣咖啡 工讀生 | 2018－2019</h3>
                     <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/simtree.png" alt="/simtree logo">
                     <p>擔任外場及吧台服務生，學習咖啡相關知識。</p>
                 </li>
