--- a/CSSTraining/week2/index.html
+++ b/CSSTraining/week2/index.html
@@ -17,8 +17,8 @@
 <body>
     <div class="main d-flex justify-content-center align-items-center">
         <div class="white">
-            <h3 class="font-size-1 font-bold">Here’s</h3>
-            <h1 class="font-black">JOANNE</h1>
+            <!-- <h3 class="font-size-1 font-bold">Here’s</h3> -->
+            <h1 class="font-black"><span class="font-size-1 font-bold">Here’s</span><br>JOANNE</h1>
             <p class="font-size-2 font-bold">Founder of “XXXD Official’’ <br> & Graphic Designer</p>
             <ul class="d-flex justify-content-between">
                 <li><a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week2/behance.svg" alt="behance icon"></a></li>
@@ -41,9 +41,9 @@
             <p class="font-2">National Hex School Normal University <br> Department of Visual Design</p> -->
             <div class="divider margin-auto"></div>
             <ul class="profile-list font-size-1 font-bold">
-                <li><div class="red-dot"></div> Founder of ‘’XXXD Official’’</li>
-                <li><div class="red-dot"></div> Graphic Designer</li>
-                <li><div class="red-dot"></div> Graphic Intern of Hex School</li>
+                <li>Founder of ‘’XXXD Official’’</li>
+                <li>Graphic Designer</li>
+                <li>Graphic Intern of Hex School</li>
             </ul>
         </div>
     </div>
