依助教回饋調整

--- a/CSSTraining/week3/layout.html
+++ b/CSSTraining/week3/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 3：眼鏡形象網站</title>
 
-    <link rel="stylesheet" href="style/css reset.css">
+    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/layout.css">
 </head>
 <body>
@@ -44,7 +44,6 @@
                     <li class="d-flex items-center"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-mail.svg" alt="mail icon"><a href="mailto:glasses@business.com">glasses@business.com</a></li>
                 </ul>
             </div>
-            <div class="divider"></div>
             <div class="footer-bottom d-flex space-between">
                 <p>Copyright © 2020 Glasses.All rights reserved.</p>
                 <ul class="terms d-flex">
