--- a/CSSTraining/week3/faq.html
+++ b/CSSTraining/week3/faq.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>常見問題</title>
 
-    <link rel="stylesheet" href="style/css reset.css">
+    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/layout.css">
     <link rel="stylesheet" href="style/faq.css">
 </head>
@@ -30,23 +30,23 @@
                 <ul class="faq-list">
                     <li>
                         <h4 class="font-s font-bold mb-3">Q1.請問可否自備鏡框單配鏡片？</h4>
-                        <p class="mb-6">A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="m-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="m-inline">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+                        <p class="mb-6">A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="d-sm-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="d-none d-sm-block">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
                     </li>
                     <li>
                         <h4 class="font-s font-bold mb-3">Q2.眼鏡都可以20分鐘取件嗎？</h4>
-                        <p class="mb-6">A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="m-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="m-inline">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+                        <p class="mb-6">A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="d-sm-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="d-none d-sm-block">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
                     </li>
                     <li>
                         <h4 class="font-s font-bold mb-3">Q3.散光鏡片需要額外加價嗎？</h4>
-                        <p class="mb-6">A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="m-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="m-inline">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+                        <p class="mb-6">A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="d-sm-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="d-none d-sm-block">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
                     </li>
                     <li>
                         <h4 class="font-s font-bold mb-3">Q4.我可以使用舊眼鏡的度數配鏡片嗎？</h4>
-                        <p class="mb-6">A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="m-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="m-inline">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+                        <p class="mb-6">A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="d-sm-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="d-none d-sm-block">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
                     </li>
                     <li>
                         <h4 class="font-s font-bold mb-3">Q5.請問可以單購買鏡框嗎？</h4>
-                        <p>A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="m-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="m-inline">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+                        <p>A1.我牌鏡框搭配薄型非球面鏡片1480元，搭配功能型鏡片則依鏡片種類加價購買。<br class="d-sm-none">當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片980元(隔日後則為1480元)，搭配功能型鏡片則依鏡片種類加價購買。<br><br class="d-none d-sm-block">他牌鏡框，搭配薄型非球面鏡片1980元，搭配功能型鏡片則依鏡片種類加價購買。</p>
                     </li>
                 </ul>
             </div>
@@ -74,7 +74,6 @@
                     <li class="d-flex items-center"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-mail.svg" alt="mail icon"><a href="mailto:glasses@business.com">glasses@business.com</a></li>
                 </ul>
             </div>
-            <div class="divider"></div>
             <div class="footer-bottom d-flex space-between">
                 <p>Copyright © 2020 Glasses.All rights reserved.</p>
                 <ul class="terms d-flex">
