--- a/CSSTraining/week3/store.html
+++ b/CSSTraining/week3/store.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>門市據點</title>
 
-    <link rel="stylesheet" href="style/css reset.css">
+    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/layout.css">
     <link rel="stylesheet" href="style/store.css">
 </head>
@@ -36,7 +36,7 @@
                 </form>
                 <ul class="store-list d-flex flex-wrap text-dark">
                     <li class="store-list-card">
-                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate1.jpeg" alt="大廳照">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate1.jpeg" alt="大廳照" class="photo">
                         <h3 class="font-m">台北中山旗艦店</h3>
                         <ul class="store-info font-s">
                             <li class="d-flex mb-1">
@@ -52,67 +52,10 @@
                                 <p>地址：台北市中山區南京東路25巷2-1號</p>
                             </li>
                         </ul>
-                        <p class="store-detail text-light">詳細資訊</p>
-                    </li>
-                    <li class="store-list-card card-2">
-                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate2.jpg" alt="走廊照">
-                        <h3 class="font-m">台北中山旗艦店</h3>
-                        <ul class="store-info font-s">
-                            <li class="d-flex mb-1">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-phone-black.svg" alt="phone icon">
-                                <p>電話：<a href="tel:02000-1234">(02)000-1234</a></p>
-                            </li>
-                            <li class="d-flex mb-1">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-clock-black.svg" alt="clock icon" alt="clock icon">
-                                <p>營業時間：10:00-21:00</p>
-                            </li>
-                            <li class="d-flex">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-map.svg" alt="address icon" class="addr-icon">
-                                <p>地址：台北市中山區南京東路25巷2-1號</p>
-                            </li>
-                        </ul>
-                        <p class="store-detail text-light">詳細資訊</p>
-                    </li>
-                    <li class="store-list-card card-3">
-                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate3.jpg" alt="客廳照">
-                        <h3 class="font-m">台北中山旗艦店</h3>
-                        <ul class="store-info font-s">
-                            <li class="d-flex mb-1">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-phone-black.svg" alt="phone icon">
-                                <p>電話：<a href="tel:02000-1234">(02)000-1234</a></p>
-                            </li>
-                            <li class="d-flex mb-1">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-clock-black.svg" alt="clock icon" alt="clock icon">
-                                <p>營業時間：10:00-21:00</p>
-                            </li>
-                            <li class="d-flex">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-map.svg" alt="address icon" class="addr-icon">
-                                <p>地址：台北市中山區南京東路25巷2-1號</p>
-                            </li>
-                        </ul>
-                        <p class="store-detail text-light">詳細資訊</p>
-                    </li>
-                    <li class="store-list-card card-4">
-                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate4.jpg" alt="會議室照">
-                        <h3 class="font-m">台北中山旗艦店</h3>
-                        <ul class="store-info font-s">
-                            <li class="d-flex mb-1">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-phone-black.svg" alt="phone icon">
-                                <p>電話：<a href="tel:02000-1234">(02)000-1234</a></p>
-                            </li>
-                            <li class="d-flex mb-1">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-clock-black.svg" alt="clock icon" alt="clock icon">
-                                <p>營業時間：10:00-21:00</p>
-                            </li>
-                            <li class="d-flex">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-map.svg" alt="address icon" class="addr-icon">
-                                <p>地址：台北市中山區南京東路25巷2-1號</p>
-                            </li>
-                        </ul>
-                        <p class="store-detail text-light">詳細資訊</p>
+                        <a href="#" class="store-detail white d-block">詳細資訊</a>
                     </li>
                     <li class="store-list-card">
-                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate5.jpg" alt="休息區照">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate2.jpg" alt="走廊照" class="photo">
                         <h3 class="font-m">台北中山旗艦店</h3>
                         <ul class="store-info font-s">
                             <li class="d-flex mb-1">
@@ -128,7 +71,64 @@
                                 <p>地址：台北市中山區南京東路25巷2-1號</p>
                             </li>
                         </ul>
-                        <p class="store-detail text-light">詳細資訊</p>
+                        <a href="#" class="store-detail white d-block">詳細資訊</a>
+                    </li>
+                    <li class="store-list-card">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate3.jpg" alt="客廳照" class="photo">
+                        <h3 class="font-m">台北中山旗艦店</h3>
+                        <ul class="store-info font-s">
+                            <li class="d-flex mb-1">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-phone-black.svg" alt="phone icon">
+                                <p>電話：<a href="tel:02000-1234">(02)000-1234</a></p>
+                            </li>
+                            <li class="d-flex mb-1">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-clock-black.svg" alt="clock icon" alt="clock icon">
+                                <p>營業時間：10:00-21:00</p>
+                            </li>
+                            <li class="d-flex">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-map.svg" alt="address icon" class="addr-icon">
+                                <p>地址：台北市中山區南京東路25巷2-1號</p>
+                            </li>
+                        </ul>
+                        <a href="#" class="store-detail white d-block">詳細資訊</a>
+                    </li>
+                    <li class="store-list-card">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate4.jpg" alt="會議室照" class="photo">
+                        <h3 class="font-m">台北中山旗艦店</h3>
+                        <ul class="store-info font-s">
+                            <li class="d-flex mb-1">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-phone-black.svg" alt="phone icon">
+                                <p>電話：<a href="tel:02000-1234">(02)000-1234</a></p>
+                            </li>
+                            <li class="d-flex mb-1">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-clock-black.svg" alt="clock icon" alt="clock icon">
+                                <p>營業時間：10:00-21:00</p>
+                            </li>
+                            <li class="d-flex">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-map.svg" alt="address icon" class="addr-icon">
+                                <p>地址：台北市中山區南京東路25巷2-1號</p>
+                            </li>
+                        </ul>
+                        <a href="#" class="store-detail white d-block">詳細資訊</a>
+                    </li>
+                    <li class="store-list-card">
+                        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate5.jpg" alt="休息區照" class="photo">
+                        <h3 class="font-m">台北中山旗艦店</h3>
+                        <ul class="store-info font-s">
+                            <li class="d-flex mb-1">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-phone-black.svg" alt="phone icon">
+                                <p>電話：<a href="tel:02000-1234">(02)000-1234</a></p>
+                            </li>
+                            <li class="d-flex mb-1">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-clock-black.svg" alt="clock icon" alt="clock icon">
+                                <p>營業時間：10:00-21:00</p>
+                            </li>
+                            <li class="d-flex">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-map.svg" alt="address icon" class="addr-icon">
+                                <p>地址：台北市中山區南京東路25巷2-1號</p>
+                            </li>
+                        </ul>
+                        <a href="#" class="store-detail white d-block">詳細資訊</a>
                     </li>
                 </ul>
             </div>
@@ -156,7 +156,6 @@
                     <li class="d-flex items-center"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-mail.svg" alt="mail icon"><a href="mailto:glasses@business.com">glasses@business.com</a></li>
                 </ul>
             </div>
-            <div class="divider"></div>
             <div class="footer-bottom d-flex space-between">
                 <p>Copyright © 2020 Glasses.All rights reserved.</p>
                 <ul class="terms d-flex">
