調整詳細資訊樣式

--- a/CSSTraining/week3/store.html
+++ b/CSSTraining/week3/store.html
@@ -52,7 +52,7 @@
                                 <p>地址：台北市中山區南京東路25巷2-1號</p>
                             </li>
                         </ul>
-                        <a href="#" class="store-detail white d-block">詳細資訊</a>
+                        <a href="#" class="store-detail text-light d-block">詳細資訊</a>
                     </li>
                     <li class="store-list-card">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate2.jpg" alt="走廊照" class="photo">
@@ -71,7 +71,7 @@
                                 <p>地址：台北市中山區南京東路25巷2-1號</p>
                             </li>
                         </ul>
-                        <a href="#" class="store-detail white d-block">詳細資訊</a>
+                        <a href="#" class="store-detail text-light d-block">詳細資訊</a>
                     </li>
                     <li class="store-list-card">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate3.jpg" alt="客廳照" class="photo">
@@ -90,7 +90,7 @@
                                 <p>地址：台北市中山區南京東路25巷2-1號</p>
                             </li>
                         </ul>
-                        <a href="#" class="store-detail white d-block">詳細資訊</a>
+                        <a href="#" class="store-detail text-light d-block">詳細資訊</a>
                     </li>
                     <li class="store-list-card">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate4.jpg" alt="會議室照" class="photo">
@@ -109,7 +109,7 @@
                                 <p>地址：台北市中山區南京東路25巷2-1號</p>
                             </li>
                         </ul>
-                        <a href="#" class="store-detail white d-block">詳細資訊</a>
+                        <a href="#" class="store-detail text-light d-block">詳細資訊</a>
                     </li>
                     <li class="store-list-card">
                         <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/locate5.jpg" alt="休息區照" class="photo">
@@ -128,7 +128,7 @@
                                 <p>地址：台北市中山區南京東路25巷2-1號</p>
                             </li>
                         </ul>
-                        <a href="#" class="store-detail white d-block">詳細資訊</a>
+                        <a href="#" class="store-detail text-light d-block">詳細資訊</a>
                     </li>
                 </ul>
             </div>
