依助教建議修改

--- a/CSSTraining/week1/task/index.html
+++ b/CSSTraining/week1/task/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <h1>Joanne <br> Chen</h1>
             <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/photo.png" alt="個人照片">
-            <h2>個人資料<span class="eg red">PROFILE</span></h2>
+            <h2 class="title">個人資料<span class="eg text-red">PROFILE</span></h2>
             <ul>
                 <li>陳久安 Joanne Chen</li>
                 <li>1997-</li>
@@ -26,7 +26,7 @@
     </div>
     <div class="education">
         <div class="container">
-            <h2>學歷<span class="eg red">EDUCATION</span></h2>
+            <h2 class="title">學歷<span class="eg text-red">EDUCATION</span></h2>
             <ul>
                 <li>國立六角師範大學 視覺設計學系 學士學位 | 2016－2020</li>
                 <li>國立六腳高級中學 美術班 | 2013－2016</li>
@@ -35,7 +35,7 @@
     </div>
     <div class="skills">
         <div class="container">
-            <h2>技能<span class="eg">SKILLS</span></h2>
+            <h2 class="text-white">技能<span class="eg">SKILLS</span></h2>
             <ul>
                 <li>Adobe Photoshop</li>
                 <li>Adobe Illustrator</li>
@@ -49,7 +49,7 @@
     </div>
     <div class="work">
         <div class="container">
-            <h2>工作經驗<span class="eg red">WORK EXPERIENCE</span></h2>
+            <h2 class="title">工作經驗<span class="eg text-red">WORK EXPERIENCE</span></h2>
             <ul>
                 <li><h3>六角學院 視覺設計實習生 | 2019/07－2020/06</h3>
                     <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/Group%201.svg" alt="六角學院 logo">
@@ -67,16 +67,16 @@
     </div>
     <div class="contact">
         <div class="container">
-            <h2>聯絡方式<span class="eg">CONTACT METHOD</span></h2>
+            <h2 class="text-white">聯絡方式<span class="eg">CONTACT METHOD</span></h2>
             <ul>
-                <li>Mail：<a href="mailto:xxxd@hexschool.com">xxxd@hexschool.com</a></li>
-                <li>Phone：<a href="tel:0910123456">0910123456</a></li>
+                <li>Mail：<a href="mailto:xxxd@hexschool.com" class="text-white">xxxd@hexschool.com</a></li>
+                <li>Phone：<a href="tel:0910123456" class="text-white">0910123456</a></li>
                 <li>Kaohsiung, Taiwan</li>
-                <li> 作品連結：<a href="#">https://www.behance.net/xxxdddddd</a></li>
+                <li> 作品連結：<a href="#" class="text-white">https://www.behance.net/xxxdddddd</a></li>
                 <li class="contact-media">
-                    <a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/facebook.svg" alt="fb icon"></a>
-                    <a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/instagram-alt.svg" alt="insta icon"></a>
-                    <a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/line.svg" alt="line icon"></a>
+                    <a href="#" class="text-white"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/facebook.svg" alt="fb icon"></a>
+                    <a href="#" class="text-white"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/instagram-alt.svg" alt="insta icon"></a>
+                    <a href="#" class="text-white"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week1/line.svg" alt="line icon"></a>
                 </li>
             </ul>
         </div>
