W1、W2依助教建議修改

--- a/CSSTraining/week2/index.html
+++ b/CSSTraining/week2/index.html
@@ -18,7 +18,7 @@
     <div class="main d-flex justify-content-center align-items-center">
         <div class="white">
             <!-- <h3 class="font-size-1 font-bold">Here’s</h3> -->
-            <h1 class="font-black"><span class="font-size-1 font-bold">Here’s</span><br>JOANNE</h1>
+            <h1 class="font-black"><span class="font-size-1 font-bold">Here’s</span><br><span class="h1">JOANNE</span></h1>
             <p class="font-size-2 font-bold">Founder of “XXXD Official’’ <br> & Graphic Designer</p>
             <ul class="d-flex justify-content-between">
                 <li><a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week2/behance.svg" alt="behance icon"></a></li>
@@ -32,14 +32,13 @@
         <div class="container">
             <h2>About</h2>
             <img class="margin-auto" src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week2/photo.png" alt="個人照片">
-            <ul class="profile-info font-size-1 font-bold">
+            <ul class="profile-info font-size-1 font-bold border-bottom margin-auto">
                 <li>Joanne Chen</li>
                 <li>1997/10/10</li>
                 <li>National Hex School Normal University <br> Department of Visual Design</li>
             </ul>
             <!-- <p class="font-1">Joanne Chen <br> 1997/10/10</p>
             <p class="font-2">National Hex School Normal University <br> Department of Visual Design</p> -->
-            <div class="divider margin-auto"></div>
             <ul class="profile-list font-size-1 font-bold">
                 <li>Founder of ‘’XXXD Official’’</li>
                 <li>Graphic Designer</li>
